modal z-index fix and events keys

--- a/react-app/src/components/Events/Elements/eventCard.css
+++ b/react-app/src/components/Events/Elements/eventCard.css
@@ -1,116 +1,116 @@
 :root {
-  --surface-color: #fff;
-  --curve: 40;
-  --bg-pink: rgb(202, 202, 202);
-  --black-color: #6a515e;
-  --text-color: #191923;
+    --surface-color: #fff;
+    --curve: 40;
+    --bg-pink: rgb(202, 202, 202);
+    --black-color: #6a515e;
+    --text-color: #191923;
 }
 
 * {
-  box-sizing:border-box;
+    box-sizing: border-box;
 }
 
 .body {
-  font-family:"Eina";
-  /* background-color:var(--bg-pink) ; */
+    font-family: "Eina";
+    /* background-color:var(--bg-pink) ; */
 }
 
 .cards {
-  display:grid;
-  grid-template-columns:repeat(auto-fit, minmax(300px), 1fr);
-  gap:2rem;
-  margin:4rem 5vw;
-  padding:0;
-  list-style:none;
-  /* object-fit: cover; */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px), 1fr);
+    gap: 2rem;
+    margin: 4rem 5vw;
+    padding: 0;
+    list-style: none;
+    /* object-fit: cover; */
 }
 
 .card {
-  position:relative;
-  display:block;
-  height:100%;
-  border-radius: calc(var(--curve) * 1px);
-  /*-webkit-border-radius: calc(var(--curve) * 1px);
+    position: relative;
+    display: block;
+    height: 100%;
+    border-radius: calc(var(--curve) * 1px);
+    /*-webkit-border-radius: calc(var(--curve) * 1px);
   -moz-border-radius: calc(var(--curve) * 1px);
   -ms-border-radius: calc(var(--curve) * 1px);
   -o-border-radius: calc(var(--curve) * 1px); */
-  overflow:hidden;
-  text-decoration:none;
+    overflow: hidden;
+    text-decoration: none;
 }
 
 .card-image {
-  width:100%;
-  height:100%;
-  object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .card-overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  border-radius: calc(var(--curve) * 1px);
-  background: var(--surface-color);
-  transform: translateY(100%);
-  transition: 0.2s ease-in-out;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 0;
+    border-radius: calc(var(--curve) * 1px);
+    background: var(--surface-color);
+    transform: translateY(100%);
+    transition: 0.2s ease-in-out;
 }
 
-.card:hover .card-overlay{
-  transform: translateY(0);
+.card:hover .card-overlay {
+    transform: translateY(0);
 }
 
 .card-header {
-  position: relative;
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-  /* border-radius: calc(var(--curve) * 1px); */
-  background-color: var(--surface-color);
-  padding: 2em;
-  transform: translateY(-100%);
-  transition: 0.2s ease-in-out;
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    /* border-radius: calc(var(--curve) * 1px); */
+    background-color: var(--surface-color);
+    padding: 2em;
+    transform: translateY(-100%);
+    transition: 0.2s ease-in-out;
 }
 
 .card-arc {
-  width: 5em;
-  height: 5em;
-  position: absolute;
-  bottom: 100%;
-  right: 0;
-  z-index: 1;
+    width: 5em;
+    height: 5em;
+    position: absolute;
+    bottom: 100%;
+    right: 0;
+    z-index: 1;
 }
 
 .card-arc path {
-  fill: var(--surface-color);
-  d: path("M 40 80 c 22 0 40 -40 v 40 Z")
+    fill: var(--surface-color);
+    d: path("M 40 80 c 22 0 40 -40 v 40 Z");
 }
 
-.card:hover .card-header{
-  transform: translateY(0);
+.card:hover .card-header {
+    transform: translateY(0);
 }
 
 .card-title {
-  font-family: "Eina-semibold";
-  font-weight: 500;
-  font-size: 2em;
-  margin: 0 0 0.3em;
-  color: var(--text-color);
+    font-family: "Eina-semibold";
+    font-weight: 500;
+    font-size: 2em;
+    margin: 0 0 0.3em;
+    color: var(--text-color);
 }
 
 .card-status {
-  font-size: 0.8em;
-  color: var(--text-color);
+    font-size: 0.8em;
+    color: var(--text-color);
 }
 
 .card-description {
-  padding: 0 2em 2em;
-  margin: 0;
-  color: var(--text-color);
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
-  overflow: hidden;
+    padding: 0 2em 2em;
+    margin: 0;
+    color: var(--text-color);
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
 }
 
 /* .main {
@@ -246,8 +246,6 @@ a {
   text-decoration: none
 } */
 
-
-
 /* OTHER */
 
 /* @media(max-height:800px) {
@@ -257,11 +255,11 @@ a {
     min-width: 50%;
     max-width: 70%;
   } */
-  /* .eventCard {
+/* .eventCard {
     min-height: 50%;
     min-width: 50%;
   } */
-  /* .title {
+/* .title {
     font-size: 9px;
   }
 
@@ -289,7 +287,7 @@ a {
     min-width: 30%;
     max-width: 40%;
   } */
-  /* .title {
+/* .title {
     font-size: 8px;
   }
 
